Finishing and testing backend system/common plus main logger (still needs code docs).