@@ -15,42 +15,48 @@
     <packaging>jar</packaging>
     <url>${base.url}/${project.artifactId}</url>
 
+    <properties>
+        <maven.compiler.source>23</maven.compiler.source>
+        <maven.compiler.target>23</maven.compiler.target>
+    </properties>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/com.google.flogger/flogger -->
-        <dependency>
-            <groupId>com.google.flogger</groupId>
-            <artifactId>flogger</artifactId>
-            <version>0.7.4</version>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/com.google.flogger/flogger-system-backend -->
-        <dependency>
-            <groupId>com.google.flogger</groupId>
-            <artifactId>flogger-system-backend</artifactId>
-            <version>0.7.4</version>
-        </dependency>
         <dependency>
             <groupId>net.goui.flogger-next</groupId>
             <artifactId>backend-common</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/com.google.flogger/flogger-grpc-context -->
+        <dependency>
+            <groupId>net.goui.flogger-next</groupId>
+            <artifactId>logger</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
+<!--        &lt;!&ndash; https://mvnrepository.com/artifact/com.google.flogger/flogger &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>com.google.flogger</groupId>-->
+<!--            <artifactId>flogger</artifactId>-->
+<!--            <version>0.8</version>-->
+<!--        </dependency>-->
+        <!-- https://mvnrepository.com/artifact/com.google.flogger/flogger-system-backend -->
         <dependency>
             <groupId>com.google.flogger</groupId>
-            <artifactId>flogger-grpc-context</artifactId>
-            <version>0.7.4</version>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>31.1-jre</version>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/com.google.auto.value/auto-value-annotations -->
-        <dependency>
-            <groupId>com.google.auto.value</groupId>
-            <artifactId>auto-value-annotations</artifactId>
-            <version>1.10.1</version>
-            <scope>provided</scope>
+            <artifactId>flogger-system-backend</artifactId>
+            <version>0.8</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/junit/junit -->
         <dependency>
@@ -63,14 +69,34 @@
         <dependency>
             <groupId>com.google.truth</groupId>
             <artifactId>truth</artifactId>
-            <version>1.1.3</version>
+            <version>1.4.1</version>
             <scope>test</scope>
         </dependency>
         <!-- https://mvnrepository.com/artifact/com.google.truth.extensions/truth-java8-extension -->
         <dependency>
             <groupId>com.google.truth.extensions</groupId>
             <artifactId>truth-java8-extension</artifactId>
-            <version>1.1.3</version>
+            <version>1.4.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.goui.flogger-testing</groupId>
+            <artifactId>junit4</artifactId>
+            <version>1.0.10</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.google.flogger/flogger-grpc-context -->
+        <dependency>
+            <groupId>com.google.flogger</groupId>
+            <artifactId>flogger-grpc-context</artifactId>
+            <version>0.8</version>
+            <scope>runtime</scope>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>33.0.0-jre</version>
             <scope>test</scope>
         </dependency>
         <!-- https://mvnrepository.com/artifact/io.grpc/grpc-context -->
@@ -78,12 +104,6 @@
             <groupId>io.grpc</groupId>
             <artifactId>grpc-context</artifactId>
             <version>1.58.0</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>net.goui.flogger-testing</groupId>
-            <artifactId>junit4</artifactId>
-            <version>1.0.8</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
